--- a/DutchTreat/Views/Shared/_Layout.cshtml
+++ b/DutchTreat/Views/Shared/_Layout.cshtml
@@ -16,12 +16,8 @@
 
             <div class="collapse navbar-collapse" id="menu">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="App" asp-action="Index">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="App" asp-action="Contact">Contact</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="Index">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="Contact">Contact</a></li>
                     @*<li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Dropdown
@@ -33,12 +29,17 @@
                             <a class="dropdown-item" href="#">Something else here</a>
                         </div>
                     </li>*@
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="App" asp-action="Shop">Shop</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" asp-controller="App" asp-action="About">About</a>
-                    </li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="Shop">Shop</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="App" asp-action="About">About</a></li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+
+                        <li class="nav-item"><a class="nav-link" asp-controller="Account" asp-action="Logout">Logout</a></li>
+                    }
+                    else
+                    {
+                        <li class="nav-item"><a class="nav-link" asp-controller="Account" asp-action="Login">Login</a></li>
+                    }
                 </ul>
             </div>
         </nav>
