--- a/DutchTreat/ClientApp/app/shop/productList.component.html
+++ b/DutchTreat/ClientApp/app/shop/productList.component.html
@@ -1,5 +1,11 @@
 <div class="row">
-    <ul>
-        <li *ngFor="let p of products">{{ p.title}}: {{ p.price | currency:"USD":true}}</li>
-    </ul>
+    <div class="product-info card card-body bg-light col-md-4" *ngFor="let p of products">
+        <img src="/img/{{p.artId}}.jpg" class="img-fluid" [alt]="p.title"/>
+        <div class="product-name">{{p.category}} - {{p.size}}</div>
+        <div><strong>Price:</strong> {{ p.price | currency:"USD":true}}</div>
+        <div><strong>Artist:</strong> {{ p.artist}}</div>
+        <div><strong>Title:</strong> {{ p.title}}</div>
+        <div><strong>Description:</strong> {{ p.artDescription}}</div>
+        <button id="buyButton" class="btn btn-success btn-sm pull-right" (click)="addProduct(p)">Buy</button>
+    </div>
 </div>
