--- a/DutchTreat/ClientApp/app/app.component.html
+++ b/DutchTreat/ClientApp/app/app.component.html
@@ -1,11 +1,1 @@
-﻿<div class="row">
-    <div class="col-md-9">
-        <h3>{{title}}</h3>
-        <product-list></product-list>
-    </div>
-    <div class="col-md-3">
-        <div class="card card-body bg-light">
-            <the-cart></the-cart>
-        </div>
-    </div>
-</div>
+﻿<router-outlet></router-outlet>
