--- a/DutchTreat/ClientApp/app/shop/cart.component.html
+++ b/DutchTreat/ClientApp/app/shop/cart.component.html
@@ -19,3 +19,4 @@
         </tr>
     </tbody>
 </table>
+<button class="btn btn-success" *ngIf="data.order.items.length" (click)="onCheckout()">Checkout</button>
