--- a/DutchTreat/Views/App/Index.cshtml
+++ b/DutchTreat/Views/App/Index.cshtml
@@ -4,7 +4,7 @@
 <div class="row">
     <div class="col-md-9">
         <div class="product-info">
-            <img src="~/img/fa1.jpg" />
+            <img src="~/img/VanGogh.jpg" />
 
             <h3>Logo</h3>
             <ul class="product-props">
